--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Celeste",
     "short_name": "Celeste",
-    "start_url": "/ ",
+    "start_url": "index.html",
     "icons": [
         {
             "src": "icons/manifest-icon-192.maskable.png",
